<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Words learning support assistant</string>
    <string name="title_activity_main">LearningWords</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="selectLanguage">Select language</string>
    <string name="title_activity_pronunciation">Pronunciation</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_audio_record">AudioRecordActivity</string>
    <string name="action_add_translation">Add translation</string>
    <string name="enter_native_word">Enter native word</string>
    <string name="select_translation">Select translation or type own</string>
    <string name="done">Done</string>
    <string name="mic_record_img">microphone</string>
    <string name="rec_voice">record voice</string>
    <string name="play_rec">play recorded voice</string>
    <string name="save_rec">save_record</string>
    <string name="cancel_rec">cancel record</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="playTrackBtn"><![CDATA[>]]></string>
    <string name="prevTrackBtn"><![CDATA[<<]]></string>
    <string name="nextTrackBtn"><![CDATA[>>]]></string>

</resources>
