<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal"
    tools:context="com.github.learningwords.activity.AudioRecordActivity"
    android:weightSum="1">



        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/record_voice"
            android:padding="15dp"
            android:layout_gravity="center"
            android:contentDescription="@string/mic_record_img" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/recordVoice"
                android:contentDescription="@string/rec_voice"
                android:src="@drawable/record" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/playRecord"
                android:src="@drawable/play"
                android:contentDescription="@string/play_rec" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/saveRecordedPronunciation"
                android:src="@drawable/accept_rec"
                android:contentDescription="@string/save_rec" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cancelRecord"
                android:src="@drawable/cancel_rec"
                android:contentDescription="@string/cancel_rec" />
        </LinearLayout>

</LinearLayout>
