<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_native_word"
        />
    <EditText
        android:id="@+id/translation_word"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_translation"
        />
    <AutoCompleteTextView
        android:id="@+id/translation_translation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:completionThreshold="1"
        />
    <Button
        android:id="@+id/translation_done"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/done"
        />
</LinearLayout>
